updated nav bar

--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Adhit Simhadri"
-title_separator          : "-"
+title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Adhit Simhadri"
-description              : "Budding AI researcher"
+description              : "Personal website and Blog"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -115,7 +115,7 @@ author:
   email            : "adhit.simhadri@gmail.com"
   links:
     links:
-    - label: "X (formerly Twitter)"
+    - label: "X"
       url: "https://x.com/ErizoSamurai"
     - label: "GitHub"
       url: "https://github.com/erizosamurai"
@@ -126,7 +126,7 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "X (formerly Twitter)"
+    - label: "X"
       url: "https://x.com/ErizoSamurai"
     - label: "GitHub"
       url: "https://github.com/erizosamurai"
