--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -22,7 +22,7 @@ title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Adhit Simhadri"
 description              : "Personal website and Blog"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://erizosamurai.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -67,7 +67,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-  hide                   : # true, false (default)
+  hide                   : true # true, false (default)
 search                   : # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -109,29 +109,25 @@ analytics:
 
 # Site Author
 author:
-  name             : "Adhit Simhadri"
-  avatar           : "/assets/images/bio-photo.JPG"
-  bio              : "Budding AI researcher"
-  email            : "adhit.simhadri@gmail.com"
+  name    : "Adhit Simhadri"
+  avatar  : "/assets/images/bio-photo.JPG"
+  bio     : "Budding AI researcher"
+  email   : "adhit.simhadri@gmail.com"
   links:
-    links:
     - label: "X"
+      # icon: "fab fa-x-twitter"
       url: "https://x.com/ErizoSamurai"
     - label: "GitHub"
+      # icon: "fab fa-github"
       url: "https://github.com/erizosamurai"
     - label: "LinkedIn"
+      # icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/adhitsimhadri/"
 
 
 # Site Footer
 footer:
-  links:
-    - label: "X"
-      url: "https://x.com/ErizoSamurai"
-    - label: "GitHub"
-      url: "https://github.com/erizosamurai"
-    - label: "LinkedIn"
-      url: "https://www.linkedin.com/in/adhitsimhadri/"
+  links: []
 
 
 # Reading Files
