--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "Adhit Simhadri"
 description              : "Personal website and Blog"
 url                      : "https://erizosamurai.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : 
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -128,7 +128,6 @@ author:
 # Site Footer
 footer:
   links: []
-
 
 # Reading Files
 include:
@@ -293,3 +292,4 @@ defaults:
       comments: # true
       share: true
       related: true
+
