--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   links:
     - label: "X"
       icon: "fab fa-x-twitter"
-      url: "https://x.com/5_4dh1t
+      url: "https://x.com/5_4dh1t"
     - label: "GitHub"
       icon: "fab fa-github"
       url: "https://github.com/s-adhit"
